--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,16 @@
 h1{
     text-align: center;
+    margin-top: 15px;
+}
+body{ 
+    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRaKHyy_fsMHgrVV62ixy8kXSL2ORcCfOKkSQTsYWfFCA-hUEZr");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 form{
     width: 350px;
     margin-left: 25%;
     margin-top: 5%;
     margin-right: 25%;
+    background-color: greenyellow;
 }
