i added onclick button

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,9 +8,9 @@ body{
     background-size: cover;
 }
 form{
-    width: 350px;
-    margin-left: 25%;
-    margin-top: 5%;
+    width: 150px;
+    margin-left: 20%;
+    margin-top: 15%;
     margin-right: 25%;
-    background-color: greenyellow;
+    margin-bottom: 20px;
 }
