--- a/css/styles.css
+++ b/css/styles.css
@@ -13,4 +13,8 @@ form{
     margin-top: 15%;
     margin-right: 25%;
     margin-bottom: 20px;
+    display : flex;
+    flex-direction : row-reverse;
+    justify-content:Space-between;
+  }
 }
