i made changes on background-image

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ p{
     font-style: bold;
 }
 body{ 
-    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRaKHyy_fsMHgrVV62ixy8kXSL2ORcCfOKkSQTsYWfFCA-hUEZr");
+    background-image: url(""https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRaKHyy_fsMHgrVV62ixy8kXSL2ORcCfOKkSQTsYWfFCA-hUEZr);
     background-repeat: no-repeat;
     background-size: cover;
 }
